# vulnpilot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATCHVEX_FINAL_THESIS.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  update-feeds.yml
assets/: sample-report.html
data/sample/: sample_exceptions.csv  sample_nessus.csv  sample_nessus_after.csv
docs/: WORKFLOW_GAP_ANALYSIS.md  evidence-packs.md  evidence.md  faq.md  quickstart.md  scoring.md  trend.md
tests/: test_cli_errors.py  test_core.py  test_deployment.py  test_evidence.py  test_exceptions.py  test_fail_on_breach.py  test_json_output.py  test_sla.py  test_verify.py
vulnpilot/: __init__.py  cli.py  evidence.py  exceptions.py  history.py  sla.py  verify.py
vulnpilot/enrich/: __init__.py  enricher.py  feeds.py
vulnpilot/parser/: __init__.py  base.py  nessus.py
vulnpilot/reports/: __init__.py  html.py  terminal.py
vulnpilot/scoring/: __init__.py  engine.py
website/: index.html  main.js  robots.txt  sitemap.xml  style.css
