[build-system]
requires = ["setuptools>=68,<72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnpilot"
version = "1.0.0"
description = "Local-first vulnerability governance for security teams. Analyze vulnerability scan results, track SLA compliance, manage risk exceptions, and generate audit-ready evidence for SOC 2 and ISO/IEC 27001."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["security", "vulnerability", "nessus", "cve", "kev", "epss", "devsecops", "compliance", "soc2", "iso27001", "audit", "sla", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
vulnpilot = "vulnpilot.cli:main"

[project.urls]
Homepage    = "https://patchvex.com"
Repository  = "https://github.com/PatchVex/vulnpilot"
"Bug Tracker" = "https://github.com/PatchVex/vulnpilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnpilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
